.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:46:08 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
xmake[1]: *** /home/jmarple/code/AutoUmp/lib_xassert: Is a directory.  Stop.
xmake: *** [check_modules_msg] Error 2
11:46:12 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
xmake[1]: *** /home/jmarple/code/AutoUmp/lib_xassert: Is a directory.  Stop.
xmake: *** [check_modules_msg] Error 2
11:46:23 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
Analyzing hwlock.c
Analyzing swlock.c
Analyzing AutoUmp.xc
In file included from ../src/AutoUmp.xc:5:
.././src/cameras/ov07740.h:83:25: warning: 'OV7740_QVGA' defined but not used
static struct SCCBPairs OV7740_QVGA[] =
                        ^~~~~~~~~~~~~
Analyzing algs.xc
Analyzing ov07740.xc
Analyzing sccb.xc
Analyzing io.xc
Analyzing ov07740.S
Analyzing swlock_asm.S
Propagating analysis
Creating dependencies for swlock_asm.S
Creating dependencies for ov07740.S
Creating dependencies for io.xc
Creating dependencies for sccb.xc
Creating dependencies for ov07740.xc
Creating dependencies for algs.xc
Creating dependencies for AutoUmp.xc
Creating dependencies for swlock.c
Creating dependencies for hwlock.c
Compiling hwlock.c
Compiling swlock.c
Compiling AutoUmp.xc
In file included from ../src/AutoUmp.xc:5:
.././src/cameras/ov07740.h:83:25: warning: 'OV7740_QVGA' defined but not used
static struct SCCBPairs OV7740_QVGA[] =
                        ^~~~~~~~~~~~~
Compiling algs.xc
Compiling ov07740.xc
Compiling sccb.xc
Compiling io.xc
Compiling ov07740.S
Compiling swlock_asm.S
Creating AutoUmp.xe
Build Complete
11:47:02 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
Analyzing ov07740.xc
../src/cameras/ov07740.xc:109:24: error: use of undeclared identifer `image'
    if (image1 == 0 || image == 0)
                       ^~~~~
xmake[1]: *** [.build/src/cameras//ov07740.xc.pca.xml] Error 1
xmake: *** [analyze] Error 2
11:47:07 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
Analyzing ov07740.xc
Propagating analysis
Creating dependencies for ov07740.xc
Compiling ov07740.xc
Creating AutoUmp.xe
Build Complete
11:47:30 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
Analyzing algs.xc
Propagating analysis
Creating dependencies for algs.xc
Compiling algs.xc
Creating AutoUmp.xe
Build Complete
11:48:16 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
Analyzing AutoUmp.xc
../src/AutoUmp.xc:40:25: error: passing arg 1 of `FloodFillThread' changes streaming qualifier of type
        FloodFillThread(ffStream1);
                        ^~~~~~~~~
../src/AutoUmp.xc:42:25: error: passing arg 1 of `FloodFillThread' changes streaming qualifier of type
        FloodFillThread(ffStream2);
                        ^~~~~~~~~
In file included from ../src/AutoUmp.xc:5:
.././src/cameras/ov07740.h:83:25: warning: 'OV7740_QVGA' defined but not used
static struct SCCBPairs OV7740_QVGA[] =
                        ^~~~~~~~~~~~~
xmake[1]: *** [.build/src//AutoUmp.xc.pca.xml] Error 1
xmake: *** [analyze] Error 2
11:48:22 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
Analyzing AutoUmp.xc
In file included from ../src/AutoUmp.xc:5:
.././src/cameras/ov07740.h:83:25: warning: 'OV7740_QVGA' defined but not used
static struct SCCBPairs OV7740_QVGA[] =
                        ^~~~~~~~~~~~~
../src/AutoUmp.xc:40:25: warning: `ffStream1' not used in two parallel statements
        FloodFillThread(ffStream1);
                        ^~~~~~~~~
../src/AutoUmp.xc:42:25: warning: `ffStream2' not used in two parallel statements
        FloodFillThread(ffStream2);
                        ^~~~~~~~~
Propagating analysis
Creating dependencies for AutoUmp.xc
Compiling AutoUmp.xc
In file included from ../src/AutoUmp.xc:5:
.././src/cameras/ov07740.h:83:25: warning: 'OV7740_QVGA' defined but not used
static struct SCCBPairs OV7740_QVGA[] =
                        ^~~~~~~~~~~~~
../src/AutoUmp.xc:40:25: warning: `ffStream1' not used in two parallel statements
        FloodFillThread(ffStream1);
                        ^~~~~~~~~
../src/AutoUmp.xc:42:25: warning: `ffStream2' not used in two parallel statements
        FloodFillThread(ffStream2);
                        ^~~~~~~~~
Creating AutoUmp.xe
Build Complete
11:49:04 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
Analyzing ov07740.xc
../src/cameras/ov07740.xc:91:6: error: conflicting types for 'OV07740_MasterThread'
void OV07740_MasterThread(
     ^~~~~~~~~~~~~~~~~~~~~
../src/cameras/ov07740.h:18:1: note: previous declaration of 'OV07740_MasterThread' was here
void OV07740_MasterThread(
^~~~~~~~~~~~~~~~~~~~~~~~~~
xmake[1]: *** [.build/src/cameras//ov07740.xc.pca.xml] Error 1
xmake: *** [analyze] Error 2
11:49:24 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
Analyzing ov07740.xc
Propagating analysis
../src/AutoUmp.xc: warning: call to OV07740_MasterThread has incorrect number of arguments
Analyzing AutoUmp.xc
../src/AutoUmp.xc:32:54: error: too few arguments to function `OV07740_MasterThread'
        OV07740_MasterThread(cmdStream1, cmdStream2, bluetoothChan);
                                                     ^
In file included from ../src/AutoUmp.xc:5:
.././src/cameras/ov07740.h:85:25: warning: 'OV7740_QVGA' defined but not used
static struct SCCBPairs OV7740_QVGA[] =
                        ^~~~~~~~~~~~~
Creating dependencies for ov07740.xc
Creating dependencies for AutoUmp.xc
Compiling AutoUmp.xc
../src/AutoUmp.xc:32:54: error: too few arguments to function `OV07740_MasterThread'
        OV07740_MasterThread(cmdStream1, cmdStream2, bluetoothChan);
                                                     ^
In file included from ../src/AutoUmp.xc:5:
.././src/cameras/ov07740.h:85:25: warning: 'OV7740_QVGA' defined but not used
static struct SCCBPairs OV7740_QVGA[] =
                        ^~~~~~~~~~~~~
xmake[1]: *** [.build/src//AutoUmp.xc.o] Error 1
xmake: *** [bin//AutoUmp.xe] Error 2
11:49:39 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
Analyzing AutoUmp.xc
In file included from ../src/AutoUmp.xc:5:
.././src/cameras/ov07740.h:85:25: warning: 'OV7740_QVGA' defined but not used
static struct SCCBPairs OV7740_QVGA[] =
                        ^~~~~~~~~~~~~
Propagating analysis
Creating dependencies for AutoUmp.xc
Compiling AutoUmp.xc
In file included from ../src/AutoUmp.xc:5:
.././src/cameras/ov07740.h:85:25: warning: 'OV7740_QVGA' defined but not used
static struct SCCBPairs OV7740_QVGA[] =
                        ^~~~~~~~~~~~~
Compiling ov07740.xc
Creating AutoUmp.xe
Build Complete
11:50:01 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
xmake[1]: `bin//AutoUmp.xe' is up to date.
Build Complete
11:50:10 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
xmake[1]: `bin//AutoUmp.xe' is up to date.
Build Complete
11:50:37 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
xmake[1]: `bin//AutoUmp.xe' is up to date.
Build Complete
11:52:32 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
Analyzing ov07740.xc
Propagating analysis
Creating dependencies for ov07740.xc
Compiling ov07740.xc
Creating AutoUmp.xe
Build Complete
11:54:25 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
Analyzing ov07740.xc
Propagating analysis
Creating dependencies for ov07740.xc
Compiling ov07740.xc
Creating AutoUmp.xe
Build Complete
11:54:57 **** Incremental Build of configuration Default for project AutoUmp ****
xmake CONFIG=Default all 
Checking build modules
Using build modules: lib_locks(2.0.3)
Analyzing ov07740.xc
Propagating analysis
Creating dependencies for ov07740.xc
Compiling ov07740.xc
Creating AutoUmp.xe
Build Complete
